# ml_course

./: activation_fn.py  architectures.py  augmentation.py  build_model.py  conv_1d.py  conv_2d.py  dynamics.py  gradient_descent.py  hidden_layers.py  inference.py  learning_methods.py  main.py  metrics.py  pyproject.toml  regression.py  streamlit_app.py  transform.py  tuning.py  tuning_torch.py  utils.py
