[project]
name = "ml-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "optuna>=4.7.0",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
